<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/>
	</parent>
	<groupId>io.github.hoangtien2k3</groupId>
	<artifactId>reactify-test</artifactId>
	<version>1.1.8</version>
	<name>reactify-test</name>
	<packaging>jar</packaging>
	<description>Java lib test</description>
	<url>https://github.com/hoangtien2k3/reactify-core</url>

	<properties>
		<java.version>21</java.version>
	</properties>

	<dependencies>
		<!-- reactify-core -->
		<dependency>
			<groupId>io.github.hoangtien2k3</groupId>
			<artifactId>reactify-cache</artifactId>
			<version>1.2.3</version>
		</dependency>
		<dependency>
			<groupId>io.github.hoangtien2k3</groupId>
			<artifactId>reactify-utils</artifactId>
			<version>1.2.3</version>
		</dependency>
		<dependency>
			<groupId>io.github.hoangtien2k3</groupId>
			<artifactId>reactify-client</artifactId>
			<version>1.2.3</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
